// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component renders card correctly 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="header"
    >
      <div
        class="heading"
      >
        <div
          class="title"
        >
          <h3
            aria-label="Card Title"
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line h3"
            role="h3"
          >
            Card Title
          </h3>
          <div
            class="docLink"
          >
            <button
              class="mia-platform-btn mia-platform-btn-circle mia-platform-btn-primary mia-platform-btn-icon-only mia-platform-btn-background-ghost button buttonMdIconOnly buttonGhost"
              type="button"
            >
              <span
                class="mia-platform-btn-icon"
              >
                <svg
                  aria-label="PiBookOpen"
                  color="#004aaa"
                  fill="currentColor"
                  height="16"
                  role="img"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(0, 74, 170);"
                  viewBox="0 0 256 256"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M232,48H160a40,40,0,0,0-32,16A40,40,0,0,0,96,48H24a8,8,0,0,0-8,8V200a8,8,0,0,0,8,8H96a24,24,0,0,1,24,24,8,8,0,0,0,16,0,24,24,0,0,1,24-24h72a8,8,0,0,0,8-8V56A8,8,0,0,0,232,48ZM96,192H32V64H96a24,24,0,0,1,24,24V200A39.81,39.81,0,0,0,96,192Zm128,0H160a39.81,39.81,0,0,0-24,8V88a24,24,0,0,1,24-24h64Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="mia-platform-typography bodyS"
          role="paragraph"
        >
          Card Subtitle
        </div>
      </div>
      <button
        class="mia-platform-btn mia-platform-btn-primary button buttonMd"
        type="button"
      >
        <div
          class="buttonText"
        >
          Button
        </div>
      </button>
    </div>
    <div
      class="content"
    >
      Card Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card Component renders content only 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="content"
    >
      Card Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card Component renders header only 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="header"
    >
      <div
        class="heading"
      >
        <div
          class="title"
        >
          <h3
            aria-label="Card Title"
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line h3"
            role="h3"
          >
            Card Title
          </h3>
          <div
            class="docLink"
          >
            <button
              class="mia-platform-btn mia-platform-btn-circle mia-platform-btn-primary mia-platform-btn-icon-only mia-platform-btn-background-ghost button buttonMdIconOnly buttonGhost"
              type="button"
            >
              <span
                class="mia-platform-btn-icon"
              >
                <svg
                  aria-label="PiBookOpen"
                  color="#004aaa"
                  fill="currentColor"
                  height="16"
                  role="img"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(0, 74, 170);"
                  viewBox="0 0 256 256"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M232,48H160a40,40,0,0,0-32,16A40,40,0,0,0,96,48H24a8,8,0,0,0-8,8V200a8,8,0,0,0,8,8H96a24,24,0,0,1,24,24,8,8,0,0,0,16,0,24,24,0,0,1,24-24h72a8,8,0,0,0,8-8V56A8,8,0,0,0,232,48ZM96,192H32V64H96a24,24,0,0,1,24,24V200A39.81,39.81,0,0,0,96,192Zm128,0H160a39.81,39.81,0,0,0-24,8V88a24,24,0,0,1,24-24h64Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="mia-platform-typography bodyS"
          role="paragraph"
        >
          Card Subtitle
        </div>
      </div>
      <button
        class="mia-platform-btn mia-platform-btn-primary button buttonMd"
        type="button"
      >
        <div
          class="buttonText"
        >
          Button
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card Component renders skeleton correctly 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="mia-platform-skeleton mia-platform-skeleton-active"
    >
      <div
        class="mia-platform-skeleton-content"
      >
        <h3
          class="mia-platform-skeleton-title"
          style="width: 38%;"
        />
        <ul
          class="mia-platform-skeleton-paragraph"
        >
          <li
            style="width: 80%;"
          />
          <li
            style="width: 65%;"
          />
          <li
            style="width: 70%;"
          />
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
